--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <div id="abb">
         <div id="abzz" class="container">
             <div class="row align-items-center">
-                <div class="col-md-6" data-aos="fade-right">
+                <div id="imm" class="col-md-6" data-aos="fade-right">
                     <div id="imm" class="about-image">
-                        <img id="imm" src="img/profile.png" alt="Profile Image" class="">
+                        <img id="im" src="img/profile.png" alt="Profile Image" class="">
                     </div>
                 </div>
                 <div id="dsaa" class="col-md-6" data-aos="fade-left">
@@ -95,7 +95,7 @@
                     <p class="about-text mb-4">I am a full-stack web developer with a passion for creating dynamic and responsive websites. My expertise includes HTML, CSS, JavaScript, PHP, Bootstrap, and MySQL. I strive to write clean, efficient code and deliver high-quality projects.</p>
                     
                     <h3 class="text-center mb-3">Skills & Technologies</h3>
-                    <div class="skills-container">
+                    <div id="ski" class="skills-container">
                         <div class="skill">
                             <h4>HTML & CSS</h4>
                             <div class="progress-bar-container">
