--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h1 data-aos="fade-left" class="text-center mb-4">Portfolio</h1>
     
             <!-- Filter Buttons -->
-            <div class="text-center mb-4" data-aos="fade-right">
+            <div class="text-center mb-4" >
                 <button class="btn btn-primary filter-button"id="fd" data-filter="all">All</button>
                 <button class="btn btn-secondary filter-button"id="fd" data-filter="web">Frontend Websites</button>
                 <button class="btn btn-secondary filter-button"id="fd" data-filter="mobile">Backend Websites</button>
