--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="section bg-light py-5" >
         <div class="container">
-            <h1 data-aos="fade-left" class="text-center mb-4">Portfolio</h1>
+            <h1  class="text-center mb-4">Portfolio</h1>
     
             <!-- Filter Buttons -->
             <div class="text-center mb-4" >
