--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
     
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="section bg-light py-5" >
+    <section id="portfolio" class="section bg-light py-5" data-aos="fade-down">
         <div class="container">
-            <h1  class="text-center mb-4">Portfolio</h1>
+            <h1 data-aos="fade-left" class="text-center mb-4">Portfolio</h1>
     
             <!-- Filter Buttons -->
-            <div class="text-center mb-4" >
+            <div class="text-center mb-4" data-aos="fade-right">
                 <button class="btn btn-primary filter-button"id="fd" data-filter="all">All</button>
                 <button class="btn btn-secondary filter-button"id="fd" data-filter="web">Frontend Websites</button>
                 <button class="btn btn-secondary filter-button"id="fd" data-filter="mobile">Backend Websites</button>
