--- a/blog.html
+++ b/blog.html
@@ -54,22 +54,22 @@
             
                 <ul id="nav-links" class="nav__links">
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="#about1">About Me</a>
+                        <a class="nav-link" href="./index.html">About Me</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="#portfolio1">Portfolio</a>
+                        <a class="nav-link" href="./index.html">Portfolio</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="#itt1">My Skils</a>
+                        <a class="nav-link" href="./index.html">My Skils</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="#">Blog</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="#contact1">Contact</a>
+                        <a class="nav-link" href="./index.html">Contact</a>
                     </li>
                 </ul>
             
