--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Full Stack Web Developer Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -63,7 +63,7 @@
                         <a class="nav-link" href="./index.html">Portfolio</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="./index.html">My Skils</a>
+                        <a class="nav-link" href="./index.html">My Skills</a>
                     </li>
                     <li class="nav-item" id="ssaq">
                         <a class="nav-link" href="#">Blog</a>
@@ -86,7 +86,7 @@
                 <!-- About Section -->
                 <div class="col-md-4 ">
                     <h5 class="text-uppercase">About <ins id="le">Me</ins></h5>
-                    <p id="kas" >I am a full-stack web developer with a passion for creating dynamic and responsive websites. My expertise includes HTML, CSS, JavaScript, PHP, Bootstrap, and MySQL. I strive to write clean, efficient code and deliver high-quality projects.</p>
+                    <p id="kas" >I’m a website developer passionate about building dynamic, responsive websites. My core skills include HTML, CSS, JavaScript, PHP, Bootstrap, and MySQL. I focus on writing clean, efficient code and delivering high-quality results. Eager to keep learning and growing, I approach every project as a chance to improve and contribute to impactful digital solutions.</p>
                 </div>
                 <!-- Contact Information -->
                 <div class="col-md-4 ">
