--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <a class="nav-link" href="#itt">My Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
+                    <a class="nav-link" href="./blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
@@ -608,7 +608,7 @@
                         <a class="nav-link" href="#itt1">My Skills</a>
                     </li>
                     <li class="nav-item" id="ssaq">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="./blog.html">Blog</a>
                     </li>
                     <li class="nav-item" id="ssaq">
                         <a class="nav-link" href="#contact1">Contact</a>
